--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -4,5 +4,7 @@ server.port=8761
 # avoid registering itself as a client
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-logging.level.com.netflix.eureka=INFO
-logging.level.com.netflix.discovery=INFO
+
+# additional logging
+logging.level.com.netflix.eureka=DEBUG
+logging.level.com.netflix.discovery=DEBUG
